// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Has default route 1`] = `
<App
  index={undefined}
  location={undefined}
  markdown={Object {}}
  plugins={Object {}}
/>
`;

exports[`sets first page and root from index file 1`] = `
<App
  index={undefined}
  location={undefined}
  markdown={
    Object {
      "/foo/bar": [Function],
      "indexFiles": Object {
        "/foo/bar": "/first/page",
      },
    }
  }
  plugins={Object {}}
/>
`;

exports[`update markdown provided 1`] = `
<App
  index={undefined}
  location={undefined}
  markdown={
    Object {
      "/foo/bar": [Function],
    }
  }
  plugins={Object {}}
/>
`;

exports[`uses plugins 1`] = `
<App
  index={undefined}
  location={undefined}
  markdown={
    Object {
      "/foo/bar": [Function],
      "indexFiles": Object {
        "/foo/bar": "/first/page",
      },
    }
  }
  plugins={
    Object {
      "test": Object {
        "component": [Function],
        "name": "test",
        "options": undefined,
      },
    }
  }
/>
`;
